layout bug

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,6 +1,6 @@
-html {
-	overflow: scroll;
-}
+/*html {*/
+/*	overflow: scroll;*/
+/*}*/
 body {
 	background-image: url("https://wallpaperset.com/w/full/c/5/9/545591.jpg");
 	min-height: 100vh;
